fixed icon spacing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -242,8 +242,8 @@ img {
   .header-icons {
     margin-top: 3%;
     margin-bottom: 3em;
-    margin-left: 1em;
-    margin-right: 1em;
+    margin-left: 0;
+    margin-right: 0;
     
   }
 
